methods.picture.PatternPicture.scala.error
Erreur de compilation :
PatternPicture:13: error: not found: value avancer
  avancer()
  ^PatternPicture:16: error: not found: value avancer
  avancer()
  ^